# khive

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EDGE_CONFLICT_SQL_AUDIT.md  FIX_SUMMARY.md  IMPL_REPORT.md  IMPL_SUMMARY_799.md  Makefile  README.md  RESOLVE_SUMMARY.md  S0_BUDGET.md  SECURITY.md  deno.json  impl_report_resolve_s1.md  implementation_notes.md  marketplace.json  pr_review.md  review_742.md  review_resolve_s1.md  review_resolve_s1_r2.md  review_resolve_s1_r3.md
crates/: Cargo.toml  deny.toml
crates/khive-bm25/: Cargo.toml  README.md
crates/khive-bm25/benches/: bm25_bench.rs
crates/khive-bm25/docs/: algorithm.md  benchmarks.md  design.md  simd.md  tokenization.md  usage.md
crates/khive-bm25/src/: config.rs  error.rs  lib.rs  metrics.rs  tokenizer.rs
crates/khive-bm25/tests/: golden.rs  integration.rs  memory_budget.rs  metrics.rs  unit.rs  wand_correctness.rs
crates/khive-brain-core/: Cargo.toml  README.md
crates/khive-brain-core/benches/: brain_core_bench.rs
crates/khive-brain-core/docs/: design-notes.md  design-rationale.md  testing-notes.md  testing-strategy.md
crates/khive-brain-core/src/: brain_signal.rs  brain_state.rs  lib.rs  posterior.rs  profile.rs  query_class.rs  section_state.rs  section_type.rs  signal.rs  tunable.rs
crates/khive-changeset/: Cargo.toml  README.md
crates/khive-changeset/docs/: format-versioning.md  preimage-model.md
crates/khive-changeset/src/: changeset.rs  envelope.rs  lib.rs  op.rs  strict.rs
crates/khive-changeset/tests/: roundtrip.rs
crates/khive-channel/: Cargo.toml  README.md
crates/khive-channel-email/: .env.example  Cargo.toml  README.md
crates/khive-channel-email/docs/: exchange-online-oauth-setup.md  gmail-setup.md  oauth-notes.md
crates/khive-channel-email/src/: auth_results.rs  backoff.rs  channel.rs  config.rs  lib.rs  oauth.rs
crates/khive-channel-email/tests/: smtp_send_smoke.rs
crates/khive-channel-telegram/: Cargo.toml
crates/khive-channel-telegram/src/: channel.rs  config.rs  connector.rs  lib.rs
crates/khive-channel/src/: lib.rs
crates/khive-db/: Cargo.toml  README.md
crates/khive-db/benches/: db_hot_path.rs
crates/khive-db/docs/: benchmarks.md  checkpoint-internals.md  design.md  migration.md  persistence.md  pool-writer-backend-internals.md  test-notes.md  vectors-internals.md
crates/khive-db/sql/: 002-narrow-fts-sections-update-trigger.sql  003-backfill-domain-mirror-atoms.sql  004-fts-consolidation.sql  005-unique-comm-external-id.sql  006-brain-retune-driver.sql  007-notes-seq.sql  008-notes-seq-repair.sql  009-entities-name-ci-index.sql  010-entities-content-ref.sql  011-ann-write-log.sql  012-ann-write-log-model-seq-index.sql  013-concept-single-origin.sql  embedding-models-ddl.sql  entities-ddl.sql  events-ddl.sql  graph-ddl.sql  knowledge_schema.sql  notes-ddl.sql  schema-migrations-table.sql  schema-version-table.sql  schema.sql
crates/khive-db/src/: backend.rs  checkpoint.rs  error.rs  extension.rs  lib.rs  migrations.rs  migrations_tests.rs  pool.rs  sql_bridge.rs  walpin.rs  writer_task.rs
crates/khive-db/tests/: blob_conformance.rs  contract.rs  home_store_guard.rs
crates/khive-fold/: Cargo.toml  README.md
crates/khive-fold/benches/: fold_bench.rs
crates/khive-fold/docs/: benchmarks.md  design.md
crates/khive-fold/src/: anchor.rs  checkpoint.rs  compose.rs  context.rs  error.rs  fold.rs  lib.rs  pipeline.rs  result.rs  selector.rs
crates/khive-fusion/: Cargo.toml  README.md
crates/khive-fusion/benches/: fusion_bench.rs
crates/khive-fusion/docs/: algorithm.md  benchmarks.md  design.md
crates/khive-fusion/src/: fuse.rs  lib.rs  rrf.rs  strategy.rs  tests.rs  union.rs  weighted.rs
crates/khive-fusion/tests/: integration.rs
crates/khive-gate/: Cargo.toml  README.md
crates/khive-gate-rego/: Cargo.toml  README.md
crates/khive-gate-rego/docs/: design.md  protocol.md
crates/khive-gate-rego/src/: gate.rs  lib.rs
crates/khive-gate-rego/tests/: integration.rs
crates/khive-gate/docs/: design.md  gate.md
crates/khive-gate/src/: actor.rs  audit.rs  context.rs  decision.rs  error.rs  gate.rs  lib.rs  obligation.rs  request.rs  tests.rs
crates/khive-gate/tests/: integration.rs
crates/khive-hnsw/: Cargo.toml  README.md
crates/khive-hnsw/benches/: hnsw_bench.rs
crates/khive-hnsw/docs/: algorithm.md  benchmarks.md  design.md  distance.md
crates/khive-hnsw/src/: config.rs  distance.rs  error.rs  lib.rs  metrics.rs  node.rs  node_id.rs  search_context.rs  stats.rs
crates/khive-hnsw/tests/: hnsw_tests.rs
crates/khive-mcp/: Cargo.toml  README.md
crates/khive-mcp/docs/: design.md  misc.md  save-sink.md
crates/khive-mcp/src/: args.rs  components.rs  (+11 more)
crates/khive-merge/: Cargo.toml  README.md
crates/khive-pack-blob/: Cargo.toml
crates/khive-pack-brain/: Cargo.toml  README.md
crates/khive-pack-code/: Cargo.toml
crates/khive-pack-comm/: Cargo.toml  README.md
crates/khive-pack-formal/: Cargo.toml  README.md
crates/khive-pack-git/: Cargo.toml
crates/khive-pack-gtd/: Cargo.toml  README.md
crates/khive-pack-kg/: Cargo.toml  README.md
crates/khive-pack-knowledge/: Cargo.toml  README.md
crates/khive-pack-memory/: Cargo.toml  README.md
crates/khive-pack-schedule/: Cargo.toml  README.md
crates/khive-pack-session/: Cargo.toml  README.md
crates/khive-pack-template/: Cargo.toml  README.md
crates/khive-pack-workspace/: Cargo.toml
crates/khive-quant/: Cargo.toml  README.md
crates/khive-query/: Cargo.toml  README.md
crates/khive-request/: Cargo.toml  README.md
crates/khive-retrieval/: Cargo.toml  README.md
crates/khive-runtime/: Cargo.toml  README.md
crates/khive-score/: Cargo.toml  README.md
crates/khive-storage/: Cargo.toml  README.md
crates/khive-text/: Cargo.toml  README.md
crates/khive-types/: Cargo.toml  README.md
crates/khive-vamana/: Cargo.toml  PERF.md  README.md
crates/khive-vcs/: Cargo.toml  README.md
crates/khive-vcs-adapters/: Cargo.toml  README.md
crates/kkernel/: Cargo.toml  README.md
(+3323 files in other folders)
