[workspace]
resolver = "2"
members = [
    "khive-types",
    "khive-score",
    "khive-storage",
    "khive-db",
    "khive-query",
    "khive-runtime",
    # Other crates land in subsequent PRs:
    # "khive-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ocean <ocean@lionagi.ai>"]
license = "Apache-2.0"
repository = "https://github.com/ohdearquant/khive"
homepage = "https://khive.ai"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive", "env"] }
lattice-embed = "0.1.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
