[workspace]
resolver = "2"
members = [
    "khive-types",
    "khive-changeset",
    "khive-score",
    "khive-quant",
    "khive-fold",
    "khive-storage",
    "khive-text",
    "khive-db",
    "khive-query",
    "khive-gate",
    "khive-gate-rego",
    "khive-fusion",
    "khive-bm25",
    "khive-hnsw",
    "khive-vamana",
    "khive-runtime",
    "khive-request",
    "khive-pack-kg",
    "khive-pack-gtd",
    "khive-pack-memory",
    "khive-brain-core",
    "khive-pack-brain",
    "khive-pack-comm",
    "khive-pack-schedule",
    "khive-pack-formal",
    "khive-pack-code",
    "khive-pack-template",
    "khive-pack-knowledge",
    "khive-pack-session",
    "khive-pack-git",
    "khive-pack-workspace",
    "khive-mcp",
    "khive-vcs",
    "khive-vcs-adapters",
    "kkernel",
    "khive-retrieval",
    "khive-channel",
    "khive-channel-email",
    "khive-channel-telegram",
]
exclude = ["khive-merge"]
# khive-merge is forward-deployed v2 infrastructure (ADR-039), not removed or
# superseded. It is excluded from workspace members because it is ahead of the
# restructured khive-vcs crate until ADR-039 integration lands. The v1 merge path
# remains git line-merge on sorted NDJSON (ADR-010, ADR-020); ADR-039's conflict
# taxonomy and semantic merge are retained for v2. Keep the crate directory and
# keep this exclusion from members.

[workspace.package]
version = "0.5.0"
edition = "2021"
# lattice-embed and lattice-fann 0.6 require Rust 1.93, setting the workspace MSRV.
# The previous 1.91 floor came from floor_char_boundary use (issue #398).
rust-version = "1.93.0"
authors = ["Ocean <ocean@lionagi.ai>"]
license = "Apache-2.0"
repository = "https://github.com/ohdearquant/khive"
homepage = "https://github.com/ohdearquant/khive"
keywords = ["knowledge-graph", "semantic-search", "mcp", "ai-tools", "graph-database"]
categories = ["database", "command-line-utilities"]

[workspace.dependencies]
inventory = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "compat"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
async-imap = "0.9"
async-native-tls = "0.5"
mail-parser = "0.9"
rusqlite = { version = "0.33" }
anyhow = "1.0.103"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
lattice-embed = "0.6.0"
lattice-fann = "0.6.0"
parking_lot = "0.12"
rand = "0.8"
rand_distr = "0.4"
toml = "0.8"
regex = "1.10"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rayon = "1.10"
memmap2 = "0.9.11"
bytemuck = "1.16"
unicode-segmentation = "1.11"
rust-stemmers = "1.2"
tempfile = "3"
lru = "0.12"
sha2 = "0.10"
hex = "0.4"
blake3 = { version = "1", default-features = false }
# Cross-platform filesystem free-space query for BlobStore's fail-closed
# floor check (khive#292). Pure Rust (rustix on Unix, windows-sys on
# Windows) — no libc statvfs FFI to hand-maintain across the release
# matrix's win32-x64 target.
fs4 = "1.1"
regorus = "0.10"
rmcp = "1.7"
futures = "0.3"
serial_test = "3"
libc = "0.2"
proptest = "1"
crossbeam-queue = "0.3"
sqlite-vec = { version = "0.1.9" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
# S3-compatible BlobStore backend (ADR-111 Amendment 2). aws-only: no fs/azure/gcs
# backends, no multipart-upload surface we don't use.
object_store = { version = "=0.14.1", default-features = false, features = ["aws"] }
# Rust Scanner (ADR-085 Amendment 2 B2, L2 symbol tier): syntax-only AST
# parsing, no type-checking. `visit` for the call-expression walker,
# `extra-traits` for PartialEq/Debug on syn types used in tests.
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

# lattice 0.3.0 published — use crates.io directly. Restore [patch.crates-io]
# block below to point at local lattice when iterating on lattice-side fixes.
