[package]
name = "khive-brain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Brain primitives — Beta posteriors, section types, profile state, weight derivation"

[lib]
bench = false

[dependencies]
khive-runtime = { version = "0.3.0", path = "../khive-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "brain_core_bench"
harness = false
