[package]
name = "khive-channel-email"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Email (SMTP/IMAP) channel adapter for khive (ADR-056)"

[dependencies]
khive-channel = { version = "0.2.11", path = "../khive-channel" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
lettre = { workspace = true }
async-imap = { workspace = true }
async-native-tls = { workspace = true }
mail-parser = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
