[package]
name = "khive-gate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pluggable authorization gate trait + default AllowAllGate impl for khive verb dispatch."

[dependencies]
khive-types = { version = "0.2.12", path = "../khive-types", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
