[package]
name = "khive-hnsw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HNSW (Hierarchical Navigable Small World) vector index with INT8 quantized two-phase search"

[lib]
bench = false

[dependencies]
khive-score = { version = "0.6.0", path = "../khive-score" }
khive-types = { version = "0.6.0", path = "../khive-types", features = ["serde"] }
khive-fold = { version = "0.6.0", path = "../khive-fold", optional = true }
lattice-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
uuid = { workspace = true }
criterion = { workspace = true }
lattice-embed = { workspace = true }

[[bench]]
name = "hnsw_bench"
harness = false

[[test]]
name = "hnsw_tests"

[features]
checkpoint = ["dep:khive-fold"]
