[package]
name = "khive-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "khive MCP server library — served via the kkernel binary"

[dependencies]
khive-db = { version = "0.6.0", path = "../khive-db" }
khive-runtime = { version = "0.6.0", path = "../khive-runtime" }
khive-storage = { version = "0.6.0", path = "../khive-storage" }
khive-types = { version = "0.6.0", path = "../khive-types", features = ["serde"] }
khive-request = { version = "0.6.0", path = "../khive-request" }
khive-pack-kg = { version = "0.6.0", path = "../khive-pack-kg" }
uuid = { workspace = true }
inventory = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io"] }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
libc = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
lattice-embed = { workspace = true, optional = true }

[features]
# bench-embedder: inject deterministic FNV-1a hash embedder into the serve path.
# Bench-only — never enabled in release/publish builds.
bench-embedder = ["lattice-embed"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
rmcp = { workspace = true, features = ["server", "transport-io", "client"] }
async-trait = { workspace = true }
serial_test = { workspace = true }
khive-pack-template = { version = "0.6.0", path = "../khive-pack-template" }

rusqlite = { workspace = true, features = ["bundled"] }
