[workspace]
# khive-merge is forward-deployed v2 infrastructure (not yet in the workspace
# members list). This [workspace] table makes the crate standalone-compilable so
# that `cargo check -p khive-merge` works without adding it to the root workspace.
# [workspace.package] below declares the shared version for this standalone workspace.

[workspace.package]
version = "0.2.11"

[package]
name = "khive-merge"
version.workspace = true
edition = "2021"
authors = ["Ocean <ocean@lionagi.ai>"]
license = "Apache-2.0"
repository = "https://github.com/ohdearquant/khive"
homepage = "https://github.com/ohdearquant"
description = "KG three-way merge with conflict detection (ADR-039)"

[dependencies]
khive-runtime = { version = "0.2.11", path = "../khive-runtime" }
khive-storage = { version = "0.2.11", path = "../khive-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["rt", "macros"] }
