[package]
name = "khive-pack-blob"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Blob verb pack — thin MCP verbs (put/get/stat) over the existing BlobStore CAS"

[dependencies]
khive-types = { version = "0.5.0", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.5.0", path = "../khive-runtime" }
khive-storage = { version = "0.5.0", path = "../khive-storage" }
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
khive-db = { version = "0.5.0", path = "../khive-db" }
tempfile = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration.rs"
