[package]
name = "khive-pack-brain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Brain pack — profile-oriented orchestration via Fold + Objective (ADR-032)"

[dependencies]
khive-brain-core = { version = "0.2.8", path = "../khive-brain-core" }
khive-types = { version = "0.2.8", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.2.8", path = "../khive-runtime" }
khive-fold = { version = "0.2.8", path = "../khive-fold" }
khive-storage = { version = "0.2.8", path = "../khive-storage" }
inventory = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
khive-pack-kg = { version = "0.2.8", path = "../khive-pack-kg" }
