[package]
name = "khive-pack-brain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Brain pack — profile-oriented orchestration via Fold + Objective (ADR-032)"

[dependencies]
khive-brain-core = { version = "0.3.0", path = "../khive-brain-core" }
khive-types = { version = "0.3.0", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.3.0", path = "../khive-runtime" }
khive-fold = { version = "0.3.0", path = "../khive-fold" }
khive-storage = { version = "0.3.0", path = "../khive-storage" }
inventory = { workspace = true }
async-trait = { workspace = true }
lattice-fann = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[features]
lattice-router = ["dep:lattice-fann"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
khive-pack-kg = { version = "0.3.0", path = "../khive-pack-kg" }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "brain_pack_bench"
harness = false
