[package]
name = "khive-pack-brain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Brain pack — profile-oriented orchestration via Fold + Objective (ADR-032)"

[lib]
bench = false

[dependencies]
khive-brain-core = { version = "0.4.0", path = "../khive-brain-core" }
khive-types = { version = "0.4.0", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.4.0", path = "../khive-runtime" }
khive-fold = { version = "0.4.0", path = "../khive-fold" }
khive-storage = { version = "0.4.0", path = "../khive-storage" }
# ADR-081 §2/§6 (findings 1+2): the fold gate needs the event
# append on the SAME held `SqlWriter` transaction as the dedup claim + mass
# fold, so it calls khive-db's transaction-enlisted `append_event_on_writer`
# seam directly rather than going through the higher-level `EventStore`
# trait (which always opens its own transaction). No cycle: khive-db does not
# depend on this crate.
khive-db = { version = "0.4.0", path = "../khive-db" }
inventory = { workspace = true }
async-trait = { workspace = true }
lattice-fann = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
# ADR-081 §4: brain.record_serve computes the deterministic query_class key
# (lowercase, strip punctuation, collapse whitespace, sort unique tokens,
# join, SHA-256, first 16 hex chars).
sha2 = { workspace = true }
hex = { workspace = true }

[features]
lattice-router = ["dep:lattice-fann"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
khive-pack-kg = { version = "0.4.0", path = "../khive-pack-kg" }
# Dev-only: exercises the real memory.recall -> BrainPack dispatch-hook path
# (issue #459 regression). khive-pack-memory already carries khive-pack-brain
# as a dev-dependency for its own tests; Cargo permits cyclic dev-dependencies
# since neither crate's normal (non-dev) dependency graph is affected.
# Path-only: cyclic dev-dep pair with khive-pack-memory; cargo strips it at publish.
khive-pack-memory = { path = "../khive-pack-memory" }
criterion = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }

[[bench]]
name = "brain_pack_bench"
harness = false
