[package]
name = "khive-pack-code"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code ontology pack - typed edge rules and audit findings vocabulary"

[dependencies]
khive-types = { version = "0.3.0", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.3.0", path = "../khive-runtime" }
khive-storage = { version = "0.3.0", path = "../khive-storage" }
inventory = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
khive-pack-kg = { version = "0.3.0", path = "../khive-pack-kg" }
tokio = { workspace = true, features = ["full"] }
